--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.xybean.taskmanager">
+          package="com.xybean.taskmanagertest">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -17,6 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".TestTaskActivity">
+        </activity>
+        <activity android:name=".DownloadActivity">
         </activity>
     </application>
 
