--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation project(':taskmanager')
+    implementation project(':transfermanager')
     implementation 'com.android.support:recyclerview-v7:26.1.0'
 
 }
