--- a/transfermanager/src/main/AndroidManifest.xml
+++ b/transfermanager/src/main/AndroidManifest.xml
@@ -1,2 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.xybean.taskmanager"/>
+          package="com.xybean.taskmanager">
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+</manifest>
